--- a/core/roles/baseline/defaults/main.yaml
+++ b/core/roles/baseline/defaults/main.yaml
@@ -19,3 +19,24 @@ ufw_ssh_appname: >-
         if ansible_facts['distribution']|lower == 'ubuntu'
         else 'SSH'
   }}
+
+# Restic Setup
+restic_install: true
+restic_enabled: true
+
+restic_repository_uri:
+restic_repository_key:
+restic_repository_env:
+
+restic_notify_cmd:
+restic_forget:
+  daily: 7
+  weekly: 4
+  monthly: 6
+
+restic_periodic_dir: >-
+  {{
+    '/etc/periodic/daily'
+      if ansible_facts['os_family']|lower == 'alpine'
+      else '/etc/cron.daily'
+  }}
