--- a/core/roles/baseline/tasks/main-debian.yaml
+++ b/core/roles/baseline/tasks/main-debian.yaml
@@ -26,6 +26,14 @@
       - vim
     update_cache: true
 
+# Install Restic and SQLite
+- name: Asymworks Baseline (Debian) | Install Restic Packages
+  ansible.builtin.apt:
+    name:
+      - restic
+      - sqlite3
+    state: "{{ 'present' if restic_install else 'absent' }}"
+
 # Set System Timezone
 - name: Asymworks Baseline (Debian) | Set Timezone
   community.general.timezone:
