--- a/core/roles/baseline/tasks/main-debian.yaml
+++ b/core/roles/baseline/tasks/main-debian.yaml
@@ -15,6 +15,7 @@
       - ca-certificates
       - curl
       - gnupg
+      - nfs-common
       - ntpsec
       - python3-bcrypt
       - python3-passlib
