--- a/core/roles/telegraf/tasks/main-debian.yaml
+++ b/core/roles/telegraf/tasks/main-debian.yaml
@@ -4,12 +4,17 @@
 # Install Influx Data Repository
 - name: Asymworks Telegraf (Debian) | Install Influx Data Package Key
   ansible.builtin.apt_key:
-    url: https://repos.influxdata.com/influxdb.key
+    url: https://repos.influxdata.com/influxdata-archive_compat.key
     state: present
+
+- name: Asymworks Telegraf (Debian) | Remove Old Influx Data Repository
+  ansible.builtin.apt_repository:
+    repo: "deb https://repos.influxdata.com/debian {{ ansible_distribution_release }} stable"
+    state: absent
 
 - name: Asymworks Telegraf (Debian) | Install Influx Data Repository
   ansible.builtin.apt_repository:
-    repo: "deb https://repos.influxdata.com/debian {{ ansible_distribution_release }} stable"
+    repo: "deb https://repos.influxdata.com/debian stable main"
     state: present
 
 # Install Packages
