Update Docker Python driver installation strategy

--- a/docker/roles/common/tasks/main-alpine.yaml
+++ b/docker/roles/common/tasks/main-alpine.yaml
@@ -15,3 +15,8 @@
     cmd: lbu include /srv
   when: alpine_diskless
   become: true
+
+# Install Python Docker SDK
+- name: Asymworks Docker (Alpine) | Install Docker Module for Python
+  ansible.builtin.pip:
+    name: docker
