fix: syntax error in bash installation

--- a/core/roles/baseline/tasks/main-alpine.yaml
+++ b/core/roles/baseline/tasks/main-alpine.yaml
@@ -90,7 +90,7 @@
     name:
       - bash
       - sqlite
-    status: present
+    state: present
 
 # Install mSMTP Packages
 - name: Asymworks Baseline (Alpine) | Install mSMTP Packages
