--- a/core/roles/telegraf/tasks/main-alpine.yaml
+++ b/core/roles/telegraf/tasks/main-alpine.yaml
@@ -3,7 +3,7 @@
 
 # Install Packages
 - name: Asymworks Telegraf (Alpine) | Install Packages
-  when: ansible_memtotal_mb >= 512
+  when: not alpine_diskless or telegraf_slim is defined and not telegraf_slim
   community.general.apk:
     update_cache: true
     state: present
@@ -11,7 +11,7 @@
       - telegraf
 
 - name: Asymworks Telegraf (Alpine) | Install Packages (Slim)
-  when: ansible_memtotal_mb < 512
+  when: alpine_diskless or telegraf_slim
   community.general.apk:
     update_cache: true
     state: present
