fix: [asymworks.core.telegraf] Telegraf Slim flag

--- a/core/roles/telegraf/defaults/main.yaml
+++ b/core/roles/telegraf/defaults/main.yaml
@@ -3,6 +3,7 @@
 
 # Telegraf Setup (see also telegraf.yaml)
 telegraf_enabled: true
+telegraf_slim: null
 telegraf_global_tags: {}
 telegraf_hostname: "{{ ansible_fqdn }}"
 
