--- a/docker/roles/traefik/tasks/main.yaml
+++ b/docker/roles/traefik/tasks/main.yaml
@@ -49,7 +49,7 @@
       - name: bridge
       - name: "{{ traefik_network }}"
     labels:
-      diun.enable: "{{ diun_enabled|bool|string }}"
+      diun.enable: "{{ diun_enabled|default(false)|bool|string }}"
     pull: "{{ docker_upgrade_images | default(false) | bool }}"
     restart_policy: unless-stopped
     container_default_behavior: compatibility
