--- a/docker/roles/traefik/tasks/main.yaml
+++ b/docker/roles/traefik/tasks/main.yaml
@@ -38,6 +38,7 @@
       - no-new-privileges:true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /etc/ssl:/etc/ssl:ro
       - /srv/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
       - /srv/traefik/acme:/etc/traefik/acme:rw
       - /srv/traefik/certs:/etc/traefik/certs:rw
