feat: [asymworks.docker.traefik] provide flag to enable Traefik API/Dashboard

--- a/docker/roles/traefik/defaults/main.yaml
+++ b/docker/roles/traefik/defaults/main.yaml
@@ -23,6 +23,9 @@ traefik_docker_ports:
   - "{{ traefik_http_port }}:80/tcp"
   - "{{ traefik_https_port }}:443/tcp"
 
+# Traefik API Access
+traefik_api_enabled: false
+
 # Traefik Firewall Configuration
 traefik_ufw_app: WWW Full
 traefik_ufw_ports: []
