feat: [asymworks.docker.traefik] provide flag to enable Traefik API/Dashboard

--- a/docker/roles/traefik/defaults/main.yaml
+++ b/docker/roles/traefik/defaults/main.yaml
@@ -24,7 +24,7 @@ traefik_docker_ports:
   - "{{ traefik_https_port }}:443/tcp"
 
 # Traefik API Access
-traefik_api_enabled: false
+traefik_enable_api: false
 
 # Traefik Firewall Configuration
 traefik_ufw_app: WWW Full
