feat[asymworks.core.baseline]: add option to install Rsync with Restic

--- a/core/roles/baseline/defaults/main.yaml
+++ b/core/roles/baseline/defaults/main.yaml
@@ -36,7 +36,8 @@ msmtp_accounts:
 msmtp_default_account: default
 
 # Restic Setup
-restic_enabled: true
+restic_enabled: false
+restic_install_rsync: false
 
 restic_repository_uri:
 restic_repository_key:
