--- a/core/roles/rsyslog/tasks/main-debian.yaml
+++ b/core/roles/rsyslog/tasks/main-debian.yaml
@@ -3,13 +3,13 @@
 
 # Ensure Debian version is at least 9
 - name: Asymworks Rsyslog (Debian) | Check Version
-  when: ansible_distribution_version is version('9', '<')
+  when: ansible_facts['distribution_version'] is version('9', '<')
   ansible.builtin.fail:
-    msg: 'Unsupported Debian Version {{ ansible_distribution_version }} - Please Upgrade to Stretch or later'
+    msg: 'Unsupported Debian Version {{ ansible_facts["distribution_version"] }} - Please Upgrade to Stretch or later'
 
 # Install Stretch Backports
 - name: Asymworks Rsyslog (Debian) | Install Backports Repository
-  when: rsyslog_enabled and ansible_distribution_version is version('10', '<')
+  when: rsyslog_enabled and ansible_facts['distribution_version'] is version('10', '<')
   ansible.builtin.apt_repository:
     repo: "deb http://deb.debian.org/debian stretch-backports main"
     state: present
@@ -20,4 +20,4 @@
   ansible.builtin.apt:
     name: rsyslog
     state: present
-    default_release: "{{ 'stretch-backports' if ansible_distribution_version is version('10', '<') else None }}"
+    default_release: "{{ 'stretch-backports' if ansible_facts['distribution_version'] is version('10', '<') else None }}"
