--- a/docker/roles/diun/defaults/main.yaml
+++ b/docker/roles/diun/defaults/main.yaml
@@ -10,6 +10,6 @@ diun_watch_workers: '20'
 
 diun_notif_mail_host: localhost
 diun_notif_mail_port: '25'
-diun_notif_mail_localname: "{{ ansible_hostname }}"
-diun_notif_mail_from: "diun@{{ ansible_fqdn }}"
+diun_notif_mail_localname: "{{ ansible_facts['hostname'] }}"
+diun_notif_mail_from: "diun@{{ ansible_facts['fqdn'] }}"
 diun_notif_mail_to: "diun@localhost"
