--- a/docker/roles/traefik/defaults/main.yaml
+++ b/docker/roles/traefik/defaults/main.yaml
@@ -4,7 +4,7 @@
 # Docker Traefik Configuration
 traefik_enabled: false
 traefik_tag: "v2.5"
-traefik_domain: "{{ ansible_domain }}"
+traefik_domain: "{{ ansible_facts['domain'] }}"
 traefik_network: traefik
 traefik_log_level: INFO
 traefik_access_log: {}
