--- a/core/roles/baseline/tasks/main-debian.yaml
+++ b/core/roles/baseline/tasks/main-debian.yaml
@@ -3,9 +3,9 @@
 
 # Ensure Debian version is at least 9
 - name: Asymworks Baseline (Debian) | Check Version
-  when: ansible_distribution_version is version('9', '<')
+  when: ansible_facts['distribution_version'] is version('9', '<')
   ansible.builtin.fail:
-    msg: 'Unsupported Debian Version {{ ansible_distribution_version }} - Please Upgrade to Stretch or later'
+    msg: 'Unsupported Debian Version {{ ansible_facts["distribution_version"] }} - Please Upgrade to Stretch or later'
 
 # Install Basic Packages
 - name: Asymworks Baseline (Debian) | Install Core Packages
