--- a/core/roles/telegraf/tasks/main-debian.yaml
+++ b/core/roles/telegraf/tasks/main-debian.yaml
@@ -9,7 +9,7 @@
 
 - name: Asymworks Telegraf (Debian) | Remove Old Influx Data Repository
   ansible.builtin.apt_repository:
-    repo: "deb https://repos.influxdata.com/debian {{ ansible_distribution_release }} stable"
+    repo: "deb https://repos.influxdata.com/debian {{ ansible_facts['distribution_release'] }} stable"
     state: absent
 
 - name: Asymworks Telegraf (Debian) | Install Influx Data Repository
