--- a/docker/roles/common/tasks/main-debian.yaml
+++ b/docker/roles/common/tasks/main-debian.yaml
@@ -20,7 +20,7 @@
 
 - name: Asymworks Docker (Debian) | Install Repository
   ansible.builtin.apt_repository:
-    repo: "deb https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable"
+    repo: "deb https://download.docker.com/linux/debian {{ ansible_facts['distribution_release'] }} stable"
     state: present
 
 # Install Docker
