--- a/docker/roles/common/tasks/main-ubuntu.yaml
+++ b/docker/roles/common/tasks/main-ubuntu.yaml
@@ -20,7 +20,7 @@
 
 - name: Asymworks Docker (Ubuntu) | Install Repository
   ansible.builtin.apt_repository:
-    repo: "deb https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+    repo: "deb https://download.docker.com/linux/ubuntu {{ ansible_facts['distribution_release'] }} stable"
     state: present
 
 # Install Docker
