--- a/core/roles/telegraf/tasks/main-alpine.yaml
+++ b/core/roles/telegraf/tasks/main-alpine.yaml
@@ -3,7 +3,7 @@
 
 # Install Packages
 - name: Asymworks Telegraf (Alpine) | Install Packages
-  when: not alpine_diskless or telegraf_slim != None and not telegraf_slim
+  when: not alpine_diskless or not telegraf_slim is truthy
   community.general.apk:
     update_cache: true
     state: present
@@ -11,7 +11,7 @@
       - telegraf
 
 - name: Asymworks Telegraf (Alpine) | Install Packages (Slim)
-  when: (alpine_diskless and telegraf_slim == None) or telegraf_slim
+  when: (alpine_diskless and telegraf_slim == None) or telegraf_slim is truthy
   community.general.apk:
     update_cache: true
     state: present
@@ -20,7 +20,7 @@
       - telegraf-slim
 
 - name: Asymworks Telegraf (Alpine) | Create telegraf Group
-  when: (alpine_diskless and telegraf_slim == None) or telegraf_slim
+  when: (alpine_diskless and telegraf_slim == None) or telegraf_slim is truthy
   ansible.builtin.group:
     name: telegraf
     system: true
