fix[docker.common]: update Telegraf configuration for newer versions

--- a/docker/roles/common/defaults/main.yaml
+++ b/docker/roles/common/defaults/main.yaml
@@ -16,8 +16,8 @@ telegraf_docker_containers: []
 telegraf_docker_containers_include: []
 telegraf_docker_containers_exclude: []
 telegraf_docker_timeout: 5s
-telegraf_docker_stats_perdev: true
-telegraf_docker_stats_total: false
+telegraf_docker_stats_perdev: ['cpu', 'blkio', 'network']
+telegraf_docker_stats_total: ['cpu', 'blkio', 'network']
 
 # Telegraf Configuration Paths
 telegraf_conf_path: /etc
